--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "dependencies": {
     "bootstrap": "^5.1.3",
     "bootstrap-vue": "^2.21.2",
+    "chart.js": "^3.6.0",
     "core-js": "^3.6.5",
     "firebase": "^8.10.0",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "vue-chartjs": "^3.5.1"
   },
   "devDependencies": {
     "@fortawesome/fontawesome-free": "^5.15.4",
